[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pictures/UI/Back.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Transylv.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Mainbutton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/ClickUI.wav" type="AudioStream" id=4]
[ext_resource path="res://UI/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://UI/Fade_scene_change.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 120
extra_spacing_char = 3
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -16, -16 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 171.0
margin_top = 20.0
margin_right = 855.0
margin_bottom = 580.0
size_flags_horizontal = 4
size_flags_stretch_ratio = 16.0
custom_constants/separation = 50

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 684.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.494118, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Willpower origin"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 165.0
margin_top = 222.0
margin_right = 518.0
margin_bottom = 477.0
size_flags_horizontal = 4
custom_constants/separation = 30

[node name="PlayButton" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]

[node name="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/PlayButton" index="1"]
text = "Play"

[node name="OptionsButton" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 95.0
margin_bottom = 160.0

[node name="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/OptionsButton" index="1"]
text = "Options"

[node name="ExitButton" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 190.0
margin_bottom = 255.0

[node name="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/ExitButton" index="1"]
text = "Exit"

[node name="FadeEffect" parent="." instance=ExtResource( 6 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="fade_finished" from="FadeEffect" to="." method="_on_FadeEffect_fade_finished"]

[editable path="MarginContainer/VBoxContainer/VBoxContainer/PlayButton"]
[editable path="MarginContainer/VBoxContainer/VBoxContainer/OptionsButton"]
[editable path="MarginContainer/VBoxContainer/VBoxContainer/ExitButton"]
[editable path="FadeEffect"]
